# name: TestPushStatus.test[uvloop-None]
  <class 'dict'> {
    'error': None,
    'progress': 23,
    'stage': 'build',
    'state': 'running',
    'step_description': None,
    'step_name': None,
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: TestPushStatus.test_bad_state[uvloop]
  <class 'dict'> {
    'errors': <class 'dict'> {
      'state': <class 'list'> [
        'unallowed value bad',
      ],
    },
    'id': 'invalid_input',
    'message': 'Invalid input',
  }
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-valid]
  <class 'tuple'> (
    201,
    <class 'dict'> {
      'error': <class 'dict'> {
        'details': <class 'list'> [
          'Valid',
        ],
        'traceback': <class 'list'> [
          'Valid',
        ],
        'type': 'KeyError',
      },
      'progress': 14,
      'stage': 'fastqc',
      'state': 'error',
      'step_description': None,
      'step_name': None,
      'timestamp': '2015-10-06T20:00:00Z',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_missing_error[uvloop]
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'Missing error information',
    },
  )
---
# name: TestPushStatus.test_name_and_description[uvloop]
  <class 'dict'> {
    'error': None,
    'progress': 14,
    'stage': 'fastqc',
    'state': 'running',
    'step_description': 'Run FastQC on the raw data',
    'step_name': 'FastQC',
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: test_acquire[uvloop-None]
  <class 'dict'> {
    'acquired': True,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'key': 'key',
    'ping': None,
    'progress': 3,
    'rights': <class 'dict'> {
    },
    'stage': None,
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_archive[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': True,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 1,
    'rights': <class 'dict'> {
    },
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_cancel[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 0,
    'rights': <class 'dict'> {
    },
    'stage': 'mk_analysis_dir',
    'state': 'running',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_delete[uvloop-None]
  <class 'dict'> {
    'removed': <class 'list'> [
      '4c530449',
    ],
  }
---
# name: test_delete[uvloop-complete]
  <class 'dict'> {
    'removed': <class 'list'> [
      '4c530449',
    ],
  }
---
# name: test_delete[uvloop-failed]
  <class 'dict'> {
    'removed': <class 'list'> [
    ],
  }
---
# name: test_delete[uvloop-finished]
  <class 'dict'> {
    'removed': <class 'list'> [
      '4c530449',
    ],
  }
---
# name: test_find_beta[uvloop-None-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'waiting': <class 'dict'> {
        'jobs_aodp': 1,
        'jobs_build_index': 3,
        'jobs_create_sample': 2,
        'jobs_create_subtraction': 2,
        'jobs_nuvs': 5,
        'jobs_pathoscope_bowtie': 2,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'fb085f7f',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '7cf872dc',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '3cbb22cc',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'da42dca3',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '09d01419',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'f60bae36',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '153ff459',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '7aa59bf4',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '031ff6cb',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '606cd773',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '83e4c4f6',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '7cce8f87',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '9c61c0ca',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '0927410c',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '4938a221',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
    ],
    'found_count': 15,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-None-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'waiting': <class 'dict'> {
        'jobs_aodp': 1,
        'jobs_build_index': 3,
        'jobs_create_sample': 2,
        'jobs_create_subtraction': 2,
        'jobs_nuvs': 5,
        'jobs_pathoscope_bowtie': 2,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'fb085f7f',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '7cf872dc',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '3cbb22cc',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'da42dca3',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '09d01419',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'f60bae36',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '153ff459',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '7aa59bf4',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '031ff6cb',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '606cd773',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '83e4c4f6',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '7cce8f87',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '9c61c0ca',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '0927410c',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2015-10-06T20:00:00Z',
        'id': '4938a221',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
        'workflow': 'jobs_nuvs',
      },
    ],
    'found_count': 15,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-None-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'waiting': <class 'dict'> {
        'jobs_aodp': 1,
        'jobs_build_index': 3,
        'jobs_create_sample': 2,
        'jobs_create_subtraction': 2,
        'jobs_nuvs': 5,
        'jobs_pathoscope_bowtie': 2,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-running-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'waiting': <class 'dict'> {
        'jobs_aodp': 1,
        'jobs_build_index': 3,
        'jobs_create_sample': 2,
        'jobs_create_subtraction': 2,
        'jobs_nuvs': 5,
        'jobs_pathoscope_bowtie': 2,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-running-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'waiting': <class 'dict'> {
        'jobs_aodp': 1,
        'jobs_build_index': 3,
        'jobs_create_sample': 2,
        'jobs_create_subtraction': 2,
        'jobs_nuvs': 5,
        'jobs_pathoscope_bowtie': 2,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-running-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'waiting': <class 'dict'> {
        'jobs_aodp': 1,
        'jobs_build_index': 3,
        'jobs_create_sample': 2,
        'jobs_create_subtraction': 2,
        'jobs_nuvs': 5,
        'jobs_pathoscope_bowtie': 2,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 1,
    'rights': <class 'dict'> {
    },
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_ping[uvloop-None]
  <class 'dict'> {
    'pinged_at': '2015-10-06T20:00:00Z',
  }
---
